fix: i#7905 select light styles

--- a/apps/example-styles/src/app/app.element.css
+++ b/apps/example-styles/src/app/app.element.css
@@ -96,3 +96,9 @@ section {
   display: flex;
   gap: var(--spacing-8);
 }
+
+.select-section {
+  .form-group {
+    min-inline-size: 200px;
+  }
+}
