--- a/libs/plugins-runtime/src/lib/modal/plugin.modal.css
+++ b/libs/plugins-runtime/src/lib/modal/plugin.modal.css
@@ -34,7 +34,7 @@
   z-index: 1000;
   padding: 25px;
   border-radius: 15px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+  border: 2px solid var(--color-background-quaternary);
 }
 
 .header {
