--- a/libs/plugins-styles/src/lib/core/generic.css
+++ b/libs/plugins-styles/src/lib/core/generic.css
@@ -72,3 +72,18 @@ ul {
   background-color: var(--background-primary);
   color: var(--foreground-secondary);
 }
+
+/* ===== Scrollbar CSS ===== */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px transparent;
+  border-radius: var(--spacing-8);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: var(--spacing-8);
+  -webkit-box-shadow: inset 0 0 6px #aab5ba;
+}
