fix(icons-plugin): light theme + uxui review

--- a/apps/icons-plugin/src/app/app.component.css
+++ b/apps/icons-plugin/src/app/app.component.css
@@ -26,4 +26,8 @@
     grid-auto-rows: max-content;
     justify-items: center;
   }
+
+  .no-icons-found {
+    font-size: var(--font-size-s);
+  }
 }
