--- a/apps/icons-plugin/src/app/components/icon-button/icon-button.component.css
+++ b/apps/icons-plugin/src/app/components/icon-button/icon-button.component.css
@@ -15,3 +15,14 @@
     box-shadow: inset 0 0 0 2px var(--da-primary);
   }
 }
+
+:host {
+  &.light {
+    .icon-button {
+      &:focus,
+      &:active {
+        box-shadow: inset 0 0 0 2px var(--accent-tertiary);
+      }
+    }
+  }
+}
