chore: clean svg code icons

--- a/apps/rename-layers-plugin/src/app/app.component.html
+++ b/apps/rename-layers-plugin/src/app/app.component.html
@@ -44,7 +44,7 @@
     >
       <span *ngIf="!btnFeedback" class="text-btn">Add</span>
       <span *ngIf="btnFeedback" class="icon icon-btn icon-tick">
-        <svg width="16" height="16" fill="none">
+        <svg viewBox="0 0 16 16" fill="none">
           <path d="M13.333 4 6 11.333 2.667 8" class="stroke" />
         </svg>
       </span>
