--- a/libs/plugins-styles/src/lib/components/select.css
+++ b/libs/plugins-styles/src/lib/components/select.css
@@ -1,7 +1,7 @@
 .select {
   appearance: none;
   background-position: right 7px center;
-  background-image: url('../icons/arrow-bottom.svg');
+  background-image: url('../icons/chevron-bottom.svg');
   background-repeat: no-repeat;
   block-size: 32px;
   border: 1px solid;
