chore: refactor and added icon to rename layers plugin

--- a/apps/rename-layers-plugin/src/app/app.component.html
+++ b/apps/rename-layers-plugin/src/app/app.component.html
@@ -43,7 +43,7 @@
       (click)="updateText()"
     >
       <span *ngIf="!btnFeedback" class="text-btn">Add</span>
-      <span *ngIf="btnFeedback" class="icon icon-btn icon-tick">
+      <span *ngIf="btnFeedback" class="icon icon-btn">
         <svg viewBox="0 0 16 16" fill="none">
           <path d="M13.333 4 6 11.333 2.667 8" class="stroke" />
         </svg>
@@ -53,7 +53,7 @@
     <ul class="preview-list">
       <li class="preview-item" *ngFor="let preview of previewList()">
         <span class="original" [title]="preview.name">{{ preview.name }}</span>
-        <span class="icon icon-arrow-right-full"></span>
+        <span class="icon icon-arrow-right"></span>
         <span class="result" [title]="resultAddText(preview)">{{
           resultAddText(preview)
         }}</span>
@@ -112,7 +112,7 @@
           [innerHTML]="highlightMatch(preview.name)"
           [title]="preview.name"
         ></span>
-        <span class="icon icon-arrow-right-full"></span>
+        <span class="icon icon-arrow-right"></span>
         <span class="result" [title]="resultReplaceText(preview.name)">{{
           resultReplaceText(preview.name)
         }}</span>
