style: remove button selector and wrap into data attribute

--- a/libs/plugins-styles/src/lib/components/button.css
+++ b/libs/plugins-styles/src/lib/components/button.css
@@ -1,4 +1,4 @@
-button {
+:where([data-appearance]:is(button), [role='tab']:is(button)) {
   border: 2px solid transparent;
   font-weight: 500;
   font-size: 12px;
