--- a/libs/plugins-styles/src/lib/components/select.css
+++ b/libs/plugins-styles/src/lib/components/select.css
@@ -9,6 +9,7 @@
   box-sizing: border-box;
   cursor: pointer;
   inline-size: 100%;
+  font-family: inherit;
   font-size: var(--font-size-s);
   font-weight: var(--font-weight-regular);
   line-height: var(--font-line-height-m);
