fix(docs): add missing variant on destructive button

--- a/apps/example-styles/src/app/app.element.html
+++ b/apps/example-styles/src/app/app.element.html
@@ -775,7 +775,11 @@
       <template lang="html">
         <div data-theme="dark">
           <button type="button" data-appearance="primary">Primary Dark</button>
-          <button type="button" data-appearance="primary">
+          <button
+            type="button"
+            data-appearance="primary"
+            data-variant="destructive"
+          >
             Primary Dark destructive
           </button>
         </div>
