--- a/libs/plugins-runtime/src/lib/modal/plugin.modal.css
+++ b/libs/plugins-runtime/src/lib/modal/plugin.modal.css
@@ -25,18 +25,51 @@
   color: var(--color-foreground-secondary);
 }
 
+::-webkit-resizer {
+  display: none;
+}
+
 .wrapper {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  position: fixed;
+  position: absolute;
   inset-block-start: var(--modal-block-start);
-  inset-inline-end: var(--modal-inline-end);
+  inset-inline-start: var(--modal-inline-start);
   z-index: 1000;
-  padding: 25px;
+  padding: 10px;
   border-radius: 15px;
   border: 2px solid var(--color-background-quaternary);
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  min-inline-size: 25px;
+  min-block-size: 200px;
+  resize: both;
+  &:after {
+    content: '';
+    cursor: se-resize;
+    inline-size: 1rem;
+    block-size: 1rem;
+    background-image: url('../assets/resize.svg');
+    background-position: center;
+    right: 5px;
+    bottom: 5px;
+    pointer-events: none;
+    position: absolute;
+  }
+}
+
+.inner {
+  padding: 10px;
+  cursor: grab;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  block-size: 100%;
+  & > * {
+    flex: 1;
+  }
+  & > .header {
+    flex: 0;
+  }
 }
 
 .header {
