--- a/apps/rename-layers-plugin/src/app/app.component.html
+++ b/apps/rename-layers-plugin/src/app/app.component.html
@@ -16,7 +16,7 @@
   </svg>
 </ng-template>
 
-<div>
+<div class="wrapper">
   <div role="tablist" class="nav-tabs">
     <button
       (click)="selectTab('add')"
