--- a/apps/example-styles/src/app/app.element.html
+++ b/apps/example-styles/src/app/app.element.html
@@ -1143,4 +1143,211 @@
       </template>
     </div>
   </section>
+
+  <section aria-label="switch">
+    <h2 class="title-large title-margin">Switch</h2>
+    <div class="component-section">
+      <div class="theme-group" data-theme="dark">
+        <ul class="switch-list">
+          <li>
+            <label for="switch1" id="switch1-label" class="switch-container">
+              <input
+                type="checkbox"
+                class="checkbox-hidden"
+                aria-labelledby="switch1-label"
+                id="switch1"
+                value="switch1"
+              />
+              <span class="switch-slider"></span>
+            </label>
+          </li>
+
+          <li>
+            <label for="switch2" id="switch2-label" class="body-m">
+              Checked
+            </label>
+            <label class="switch-container">
+              <input
+                type="checkbox"
+                class="checkbox-hidden"
+                aria-labelledby="switch2-label"
+                id="switch2"
+                value="switch2"
+                checked
+              />
+              <span class="switch-slider"></span>
+            </label>
+          </li>
+
+          <li>
+            <label for="switch3" id="switch3-label" class="body-m">
+              Disabled
+            </label>
+            <label class="switch-container">
+              <input
+                type="checkbox"
+                class="checkbox-hidden"
+                aria-labelledby="switch3-label"
+                id="switch3"
+                value="switch3"
+                disabled
+              />
+              <span class="switch-slider"></span>
+            </label>
+          </li>
+        </ul>
+      </div>
+
+      <template lang="html">
+        <div class="theme-group" data-theme="dark">
+          <label for="switch1" id="switch1-label" class="switch-container">
+            <input
+              type="checkbox"
+              class="checkbox-hidden"
+              aria-labelledby="switch1-label"
+              id="switch1"
+              value="switch1"
+            />
+            <span class="switch-slider"></span>
+          </label>
+
+          <div>
+            <label for="switch2" id="switch2-label" class="body-m">
+              Checked
+            </label>
+            <label class="switch-container">
+              <input
+                type="checkbox"
+                class="checkbox-hidden"
+                aria-labelledby="switch2-label"
+                id="switch2"
+                value="switch2"
+                checked
+              />
+              <span class="switch-slider"></span>
+            </label>
+          </div>
+
+          <div>
+            <label for="switch3" id="switch3-label" class="body-m">
+              Disabled
+            </label>
+            <label class="switch-container">
+              <input
+                type="checkbox"
+                class="checkbox-hidden"
+                aria-labelledby="switch3-label"
+                id="switch3"
+                value="switch3"
+                disabled
+              />
+              <span class="switch-slider"></span>
+            </label>
+          </div>
+        </div>
+      </template>
+    </div>
+
+    <div class="component-section">
+      <div class="theme-group" data-theme="light">
+        <ul class="switch-list">
+          <li>
+            <label for="switch4" id="switch4-label" class="switch-container">
+              <input
+                type="checkbox"
+                class="checkbox-hidden"
+                aria-labelledby="switch4-label"
+                id="switch4"
+                value="switch4"
+              />
+              <span class="switch-slider"></span>
+            </label>
+          </li>
+
+          <li>
+            <label for="switch5" id="switch5-label" class="body-m">
+              Checked
+            </label>
+            <label class="switch-container">
+              <input
+                type="checkbox"
+                class="checkbox-hidden"
+                aria-labelledby="switch5-label"
+                id="switch5"
+                value="switch5"
+                checked
+              />
+              <span class="switch-slider"></span>
+            </label>
+          </li>
+
+          <li>
+            <label for="switch6" id="switch6-label" class="body-m">
+              Disabled
+            </label>
+            <label class="switch-container">
+              <input
+                type="checkbox"
+                class="checkbox-hidden"
+                aria-labelledby="switch6-label"
+                id="switch6"
+                value="switch6"
+                disabled
+              />
+              <span class="switch-slider"></span>
+            </label>
+          </li>
+        </ul>
+      </div>
+
+      <template lang="html">
+        <div class="theme-group" data-theme="light">
+          <label for="switch4" id="switch4-label" class="switch-container">
+            <input
+              type="checkbox"
+              class="checkbox-hidden"
+              aria-labelledby="switch4-label"
+              id="switch4"
+              value="switch4"
+            />
+            <span class="switch-slider"></span>
+          </label>
+
+          <div>
+            <label for="switch5" id="switch5-label" class="body-m">
+              Checked
+            </label>
+            <label class="switch-container">
+              <input
+                type="checkbox"
+                class="checkbox-hidden"
+                aria-labelledby="switch5-label"
+                id="switch5"
+                value="switch5"
+                checked
+              />
+              <span class="switch-slider"></span>
+            </label>
+          </div>
+
+          <div>
+            <label for="switch6" id="switch6-label" class="body-m">
+              Disabled
+            </label>
+            <label class="switch-container">
+              <input
+                type="checkbox"
+                class="checkbox-hidden"
+                aria-labelledby="switch6-label"
+                id="switch6"
+                value="switch6"
+                disabled
+              />
+              <span class="switch-slider"></span>
+            </label>
+          </div>
+        </div>
+      </template>
+    </div>
+  </section>
 </main>
