--- a/libs/plugins-styles/src/lib/styles.css
+++ b/libs/plugins-styles/src/lib/styles.css
@@ -11,3 +11,4 @@
 @import url("components/icon.css");
 @import url("components/select.css");
 @import url("components/input.css");
+@import url("components/switch.css");
